# gargoyle

./: Cargo.toml  LICENSE  README.org  build.rs
.github/workflows/: ci.yml
proc_macros/: Cargo.toml
proc_macros/src/: fn_args.rs  lib.rs  macro_args.rs
src/: alloc.rs  catch.rs  char_set.rs  collections.rs  dynwind.rs  error.rs  eval.rs  exception.rs  foreign_object.rs  guard.rs  guile_mode.rs  hash_map.rs  hook.rs  lib.rs  list.rs  module.rs  num.rs  primitive.rs  protection.rs  rand.rs  reexports.c  reexports.h  reexports.rs  reference.rs  scm.rs  scope.rs  string.rs  subr.rs  symbol.rs  sys.rs  tuple.rs  utils.rs  v0.rs  vector.rs
src/collections/: byte_vector.rs  char_set.rs  hash_map.rs  list.rs  pair.rs  vector.rs
src/num/: complex.rs  int.rs  rational.rs
src/primitive/: bool.rs  char.rs  tuple.rs
tests/fail/: identity.rs  identity.stderr  smuggle.rs  smuggle.stderr
