[package]
name = "gargoyle"
version = "0.1.0"
edition = "2024"
description = "guile bindings for rust"
license = "MIT"

[features]
default = ["guile_latest"]

guile_2_2 = []
guile_3_0 = []
guile_latest = ["guile_3_0"]

[build-dependencies]
cc = { version = "1.2.30", default-features = false }
cfg-if = { version = "1.0.1", default-features = false }

[dependencies]
allocator-api2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
generativity = { version = "1.1.0", default-features = false }
parking_lot = { version = "0.12.4", default-features = false }
string = { version = "0.3.1", default-features = false }

[dev-dependencies]
trybuild = { version = "1.0.106", default-features = false }
