[package]
name = "garguile"
version = "0.1.3"
edition = "2024"
description = "guile bindings for rust"
license = "Apache-2.0"
repository = "https://github.com/asdfish/gargoyle"
readme = "README.org"
categories = ["api-bindings", "compilers", "config"]

[features]

[build-dependencies]
cc = { version = "1.2.30", default-features = false }

[dependencies]
allocator-api2 = { version = "0.3.0", default-features = false, features = ["alloc"] }
parking_lot = { version = "0.12.4", default-features = false }
string = { version = "0.3.1", default-features = false }
bstr = { version = "1.12.0", default-features = false }
garguile_proc_macros = { version = "0.1.0", path = "./proc_macros" }

[dev-dependencies]
itertools = { version = "0.14.0", default-features = false }
tempfile = { version = "3.20.0", default-features = false }
