[package]
name = "proc_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
convert_case = { version = "0.8.0", default-features = false }
proc-macro2 = { version = "1.0.95", default-features = false, features = ["proc-macro"] }
quote = { version = "1.0.40", default-features = false }
syn = { version = "2.0.104", default-features = false, features = ["full", "parsing", "printing"] }
