[package]
name = "garguile_proc_macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
quote = { version = "1.0.40", default-features = false, features = ["proc-macro"] }
convert_case = { version = "0.8.0", default-features = false }
proc-macro2 = { version = "1.0.95", default-features = false }
syn = { version = "2.0.104", default-features = false, features = ["full", "proc-macro", "clone-impls", "parsing", "printing", "derive"] }
